feat: update movieAPI
