# docs/rpcswagger/apidocs.swagger.json
@@ -299,6 +299,13 @@
             "required": false,
             "type": "string",
             "format": "int64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -370,6 +377,51 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "Dandelion"
+        ]
+      }
+    },
+    "/movies/watching/{userId}": {
+      "get": {
+        "operationId": "Dandelion_GetWatchingMovies",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGetWatchingMoviesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "integer",
@@ -585,6 +637,18 @@
         }
       }
     },
+    "pbGetWatchingMoviesResponse": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbWatchingMovie"
+          }
+        }
+      }
+    },
     "pbMovie": {
       "type": "object",
       "properties": {
@@ -683,6 +747,22 @@
         "stars": {
           "type": "integer",
           "format": "int32"
+        }
+      }
+    },
+    "pbWatchingMovie": {
+      "type": "object",
+      "properties": {
+        "movie": {
+          "$ref": "#/definitions/pbMovie"
+        },
+        "watchedDuration": {
+          "type": "number",
+          "format": "float"
+        },
+        "lastWatched": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
