# pb/model/movie.pb.go
@@ -266,6 +266,69 @@ func (x *MoviesSeries) GetSeriesId() int32 {
 	return 0
 }
 
+type WatchingMovie struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Movie           *Movie               `protobuf:"bytes,1,opt,name=movie,proto3" json:"movie,omitempty"`
+	WatchedDuration float32              `protobuf:"fixed32,2,opt,name=watched_duration,json=watchedDuration,proto3" json:"watched_duration,omitempty"`
+	LastWatched     *timestamp.Timestamp `protobuf:"bytes,3,opt,name=last_watched,json=lastWatched,proto3" json:"last_watched,omitempty"`
+}
+
+func (x *WatchingMovie) Reset() {
+	*x = WatchingMovie{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_model_movie_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *WatchingMovie) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*WatchingMovie) ProtoMessage() {}
+
+func (x *WatchingMovie) ProtoReflect() protoreflect.Message {
+	mi := &file_model_movie_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use WatchingMovie.ProtoReflect.Descriptor instead.
+func (*WatchingMovie) Descriptor() ([]byte, []int) {
+	return file_model_movie_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *WatchingMovie) GetMovie() *Movie {
+	if x != nil {
+		return x.Movie
+	}
+	return nil
+}
+
+func (x *WatchingMovie) GetWatchedDuration() float32 {
+	if x != nil {
+		return x.WatchedDuration
+	}
+	return 0
+}
+
+func (x *WatchingMovie) GetLastWatched() *timestamp.Timestamp {
+	if x != nil {
+		return x.LastWatched
+	}
+	return nil
+}
+
 var File_model_movie_proto protoreflect.FileDescriptor
 
 var file_model_movie_proto_rawDesc = []byte{
@@ -303,10 +366,20 @@ var file_model_movie_proto_rawDesc = []byte{
 	0x6f, 0x76, 0x69, 0x65, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x07, 0x6d,
 	0x6f, 0x76, 0x69, 0x65, 0x49, 0x64, 0x12, 0x1b, 0x0a, 0x09, 0x73, 0x65, 0x72, 0x69, 0x65, 0x73,
 	0x5f, 0x69, 0x64, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x73, 0x65, 0x72, 0x69, 0x65,
-	0x73, 0x49, 0x64, 0x42, 0x33, 0x5a, 0x31, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
-	0x6d, 0x2f, 0x6c, 0x61, 0x6e, 0x63, 0x65, 0x72, 0x32, 0x36, 0x37, 0x32, 0x2f, 0x44, 0x61, 0x6e,
-	0x64, 0x65, 0x6c, 0x69, 0x6f, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x5f, 0x47, 0x6f, 0x2f,
-	0x70, 0x62, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x49, 0x64, 0x22, 0x9a, 0x01, 0x0a, 0x0d, 0x57, 0x61, 0x74, 0x63, 0x68, 0x69, 0x6e, 0x67,
+	0x4d, 0x6f, 0x76, 0x69, 0x65, 0x12, 0x1f, 0x0a, 0x05, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x09, 0x2e, 0x70, 0x62, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x52,
+	0x05, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x12, 0x29, 0x0a, 0x10, 0x77, 0x61, 0x74, 0x63, 0x68, 0x65,
+	0x64, 0x5f, 0x64, 0x75, 0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x18, 0x02, 0x20, 0x01, 0x28, 0x02,
+	0x52, 0x0f, 0x77, 0x61, 0x74, 0x63, 0x68, 0x65, 0x64, 0x44, 0x75, 0x72, 0x61, 0x74, 0x69, 0x6f,
+	0x6e, 0x12, 0x3d, 0x0a, 0x0c, 0x6c, 0x61, 0x73, 0x74, 0x5f, 0x77, 0x61, 0x74, 0x63, 0x68, 0x65,
+	0x64, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74,
+	0x61, 0x6d, 0x70, 0x52, 0x0b, 0x6c, 0x61, 0x73, 0x74, 0x57, 0x61, 0x74, 0x63, 0x68, 0x65, 0x64,
+	0x42, 0x33, 0x5a, 0x31, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6c,
+	0x61, 0x6e, 0x63, 0x65, 0x72, 0x32, 0x36, 0x37, 0x32, 0x2f, 0x44, 0x61, 0x6e, 0x64, 0x65, 0x6c,
+	0x69, 0x6f, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x5f, 0x47, 0x6f, 0x2f, 0x70, 0x62, 0x2f,
+	0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -321,20 +394,23 @@ func file_model_movie_proto_rawDescGZIP() []byte {
 	return file_model_movie_proto_rawDescData
 }
 
-var file_model_movie_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_model_movie_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_model_movie_proto_goTypes = []interface{}{
 	(*Movie)(nil),               // 0: pb.Movie
 	(*MovieGenre)(nil),          // 1: pb.MovieGenre
 	(*MoviesSeries)(nil),        // 2: pb.MoviesSeries
-	(*timestamp.Timestamp)(nil), // 3: google.protobuf.Timestamp
+	(*WatchingMovie)(nil),       // 3: pb.WatchingMovie
+	(*timestamp.Timestamp)(nil), // 4: google.protobuf.Timestamp
 }
 var file_model_movie_proto_depIdxs = []int32{
-	3, // 0: pb.Movie.created_at:type_name -> google.protobuf.Timestamp
-	1, // [1:1] is the sub-list for method output_type
-	1, // [1:1] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	4, // 0: pb.Movie.created_at:type_name -> google.protobuf.Timestamp
+	0, // 1: pb.WatchingMovie.movie:type_name -> pb.Movie
+	4, // 2: pb.WatchingMovie.last_watched:type_name -> google.protobuf.Timestamp
+	3, // [3:3] is the sub-list for method output_type
+	3, // [3:3] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_model_movie_proto_init() }
@@ -379,6 +455,18 @@ func file_model_movie_proto_init() {
 				return nil
 			}
 		}
+		file_model_movie_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*WatchingMovie); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -386,7 +474,7 @@ func file_model_movie_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_model_movie_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
